<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_calculator"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_timetables"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_timetables"
        app:showAsAction="always"/>


    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_local_dining_black_24dp"
        android:title="@string/title_food"
        app:showAsAction="always"/>


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="always"/>

</menu>
